[cactpot-solver] Fixed bug where a small enough window will push the app out of bounds

--- a/ffxiv-mini-cactpot-solver/index.css
+++ b/ffxiv-mini-cactpot-solver/index.css
@@ -33,6 +33,13 @@
     box-sizing: border-box;
 }
 
+html, body {
+    min-width: fit-content;
+    min-width: -moz-fit-content;
+    min-height: fit-content;
+    min-height: -moz-fit-content;
+}
+
 body {
     display: flex;
     align-items: center;
